// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Widget default 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 1.875em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 0em;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Recusandae quo mollitia est reiciendis sunt odio fuga. Non eaque sequi voluptas accusantium occaecati quia consequatur. Minima ut sed aut assumenda quo illo sed unde repellendus. Quam est est non odit architecto omnis ad quas. Ipsam voluptas repudiandae animi nihil fugiat omnis eveniet et aut.
 
Qui eos veniam quasi aut architecto et perferendis sed ut. Explicabo numquam voluptas eum. Recusandae corrupti nostrum ut quis ex quos aliquam. Voluptates mollitia est. Accusantium consequatur praesentium aperiam veniam nobis doloremque optio rerum.
 
Quam sit dolor quibusdam quo quia accusantium nemo aspernatur. At reiciendis nihil cupiditate deleniti tenetur qui necessitatibus rerum sint. Quis sit impedit in blanditiis ut. Quod doloribus perspiciatis est minus suscipit animi. Asperiores amet modi. Est esse ut et numquam recusandae mollitia.
 
Eos repudiandae a consequatur a. Eaque et inventore nostrum consequatur et enim consequatur illo voluptate. Qui ex rerum tenetur nam.
    </p>
  </div>
</div>
`;

exports[`Storyshots molecules|Widget no padding 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c3:first-child {
  margin-top: 0;
}

.c3:last-child {
  margin-bottom: 0;
}

.c3,
input.c3 {
  font-size: 1.5em;
}

.c3 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c4:first-child {
  margin-top: 0;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  background: white;
  box-shadow: 1px 1px 0 rgba(0,168,216,0.4);
  padding: 0em;
  position: relative;
  box-sizing: border-box;
  border-radius: 3px;
  width: 100%;
}

.c2 {
  padding: 1.875em;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <h1
        className="c3"
        type="header"
      >
        Title
      </h1>
    </div>
    <p
      className="c4"
    >
      Minima qui quas qui. Itaque aut nihil possimus odio at et nulla. Necessitatibus vel eum. Dignissimos in aut voluptates tempora explicabo ut perspiciatis veniam ducimus.
 
Necessitatibus perspiciatis et eligendi sequi assumenda aut. Harum ea non natus nisi. Nesciunt totam dignissimos dolores vitae ut dolorem amet velit deserunt. Assumenda sunt quam officiis eos et quos et. Aperiam sed sint facilis eos consequuntur. Repellendus aut voluptatem magnam ut modi dolorem quae saepe aut.
 
Dicta quae aliquam minima ea rerum. Exercitationem minima enim suscipit deserunt quos vel enim. Corrupti dolores perspiciatis harum consequatur aliquid nisi quis. Dolores neque itaque sed aut. Itaque eos amet fugiat recusandae ex itaque quas. Ea ad at omnis delectus.
 
Dignissimos et amet qui rerum enim quos natus. Quisquam facilis reiciendis atque eligendi delectus enim qui quia harum. Distinctio et iusto.
    </p>
  </div>
</div>
`;
